flex styling in progress

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -8,7 +8,6 @@
 }
 
 .calculator {
-  background-color: green;
   width: 40rem;
   height: 28.25rem;
   position: absolute;
@@ -18,6 +17,7 @@
 
 .calculator h1{
   padding: 1.5%;
+  background-color: grey;
 }
 
 @media (max-width: 700px){
@@ -28,19 +28,23 @@
 
 .calculatorScreen{
   background-color: black;
-  width: 80%;
-  height: 20%;
+  min-width: 80%;
+  min-height: 20%;
 }
 
 .calculatorKeypad{
   background-color: black;
-  width: 80%;
-  height: 70%;
-  display: grid;
+  min-width: 80%;
+  min-height: 70%;
+  display: flex!important;
+  flex-wrap: wrap;
+}
+
+.calcBtn{
+  flex: 1 0 25%; /* explanation below */  
 }
 
 .footer {
-  background-color: yellow;
   width: 100%;
   position: absolute;
   bottom: 0;
