--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,15 +10,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: aliceblue;  
 }
 
 a {
   color: inherit;
   text-decoration: none;
 
-}
-
-button{
-  border-radius: 5%;
-  border: none;
 }
