--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,23 +1,20 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  height: -webkit-fill-available;
 }
 
 .calculator {
-  width: 40rem;
-  height: 100%;
-  position: absolute;
-  top: 0px;
+  width: 40rem; 
+  min-height: 100%;
   background-color: #181D31;
 }
 
 @media (max-width: 700px){
   .calculator {
-    width: 27.5rem;
+    width: 25.75rem;
   }   
 }
 
