--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: bold;
 }
 
 .calculator {
@@ -18,19 +19,19 @@
 
 .calculatorScreen{
   max-width: 80%;
-  min-height: 7rem;
+  min-height: 9rem;
   margin: 2.5% auto;
 }
 
 @media (max-width: 700px){
   .calculatorScreen{
-    min-height: 10rem; 
+    min-height: 9rem; 
   }
 }
 
 .calculatorScreen span{
   position: relative;
-  top: 1rem;
+  top: 2rem;
   z-index: 1;
   font-size: 5.25rem;
 }
@@ -63,7 +64,6 @@
 @media (max-width: 700px){
   .calcBtn{
     font-size: 3rem;
-    min-height: 6.05rem;
   }
 }
 
