adjust elements to be bolder and screen larger

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 700px){
   .calculatorScreen{
-    min-height: 12rem; 
+    min-height: 12.25rem; 
   }
 }
 
@@ -38,9 +38,16 @@
 
 @media (max-width: 700px){
   .calculatorScreen span{
-    top: 4rem;
+    top: 4.1rem;
     font-size: 3.95rem;
-    right: 2%;
+    right: 3.5%;
+  }
+}
+
+@media (max-width: 700px){
+  .calculatorScreen .answer-span{
+    font-size: 4rem;
+    right: 0.1%;
   }
 }
 
@@ -64,7 +71,7 @@
 @media (max-width: 700px){
   .calcBtn{
     font-size: 3rem;
-    min-height: 5.3rem;
+    min-height: 5.4rem;
   }
 }
 
