--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
 
 .calculatorScreen{
   max-width: 80%;
-  min-height: 9rem;
+  min-height: 10.6rem;
   margin: 2.5% auto;
 }
 
@@ -31,7 +31,7 @@
 
 .calculatorScreen span{
   position: relative;
-  top: 2.5rem;
+  top: 2.75rem;
   z-index: 1;
   font-size: 5.25rem;
 }
@@ -45,7 +45,7 @@
 }
 
 @media (max-width: 700px){
-  .calculatorScreen .answer-span{
+  .calculatorScreen {
     font-size: 4rem;
     left: 3.5%;
   }
@@ -63,8 +63,8 @@
   flex: 1 0 24%; 
   background-color: #FFFAE7;
   color: #181D31;
-  min-height: 5rem;
-  font-size: 3.5rem;
+  min-height: 4.3rem;
+  font-size: 3.25rem;
   border: #181D31 1px solid;
 }
 
