--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,19 +29,26 @@
   }
 }
 
-.calculatorScreen span{
+.calculatorScreen .mainScreen span{
   position: relative;
-  top: 2.75rem;
+  top: 2rem;
   z-index: 1;
   font-size: 5.25rem;
 }
 
 @media (max-width: 700px){
-  .calculatorScreen span{
+  .calculatorScreen .mainScreen span{
     top: 6.1rem;
     font-size: 3.95rem;
     right: 3.5%;
   }
+}
+
+.miniScreen{
+  font-size: 2rem;
+  position: relative;
+  top: 2.5rem;
+
 }
 
 @media (max-width: 700px){
