--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,32 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-weight: bold;
+  height: 100vh;
+  width: 100vw;
 }
 
 .calculator {
-  width: 40rem; 
-  min-height: 100%;
-  background-color: #181D31;
-}
-
-@media (max-width: 700px){
-  .calculator {
-    width: 25.75rem;
-  }   
+  width: 42.5%;
+  height: 100%;
 }
 
 .calculatorScreen{
-  max-width: 80%;
-  min-height: 10.6rem;
-  margin: 2.5% auto;
-}
-
-@media (max-width: 700px){
-  .calculatorScreen{
-    min-height: 12.3rem; 
-    font-size: 4rem;
-  }
+  height: 37.5%;
+  background-color: #181D31;
 }
 
 .calculatorScreen .miniScreen span{
@@ -65,35 +51,18 @@
   color: white;
 }
 
-@media (max-width: 700px){
-  .mainScreen span{
-    top: 0rem!important;
-    right: 0.5%;
-  }
-}
-
 .calculatorKeypad{
-  min-width: 75%;
-  min-height: 100%;
+  height: 62.5%;
   display: flex!important;
   flex-wrap: wrap;
-  padding: 0 0.1%;
 }
 
 .calcBtn{
   flex: 1 0 24%; 
   background-color: #FFFAE7;
   color: #181D31;
-  min-height: 4.3rem;
   font-size: 3.25rem;
   border: #181D31 1px solid;
-}
-
-@media (max-width: 700px){
-  .calcBtn{
-    font-size: 3rem;
-    min-height: 5.6rem;
-  }
 }
 
 .calculatorKeypad button:nth-child(-n+3){
@@ -125,5 +94,17 @@
 
 .calcBtn:active{
   border: #181D31 4px solid;
+}
+
+@media (max-width: 996px){
+  .calculator{
+    width: 70%;
+  }
+}
+
+@media (max-width: 576px){
+  .calculator{
+    width: 100%;
+  }
 }
 
