--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,37 +18,15 @@
 
 .calculatorScreen .miniScreen span{
   position: relative;
-  top: 0.75rem;
-  z-index: 1;
-  font-size: 1.5rem;
-}
-
-@media (max-width: 700px){
-  .miniScreen span{
-    top: 0rem!important;
-    font-size: 1.75rem!important;
-    display: inline-block;
-  }
+  top: 3.25rem;
+  font-size: 2rem;
 }
 
 .calculatorScreen .mainScreen span{
   position: relative;
-  top: 1.5rem;
-  z-index: 1;
+  top: 5rem;
   font-size: 5.25rem;
   cursor: pointer;
-  border-radius: 1rem;
-  padding: 0rem 0.5rem;
-}
-
-.calculatorScreen .mainScreen span:hover{
-  background-color: white;
-  color: #181D31;
-}
-
-.calculatorScreen .mainScreen span:active{
-  background-color: #0779E4;
-  color: white;
 }
 
 .calculatorKeypad{
@@ -63,6 +41,7 @@
   color: #181D31;
   font-size: 3.25rem;
   border: #181D31 1px solid;
+  cursor: pointer;
 }
 
 .calculatorKeypad button:nth-child(-n+3){
@@ -70,17 +49,9 @@
   color: #FFFAE7;
 }
 
-.calculatorKeypad button:nth-child(-n+3):active{
-  border: #FFFAE7 4px solid;
-}
-
 .calculatorKeypad button:nth-child(4n){
   background-color: #9951FF!important;
   color: #FFFAE7;
-}
-
-.calculatorKeypad button:nth-child(4n):active{
-  border: #FFFAE7 4px solid;
 }
 
 .calculatorKeypad button:nth-child(20){
@@ -88,13 +59,25 @@
   color: #FFFAE7;
 }
 
+/* onclick & hover */
+
+.calculatorScreen .mainScreen span:hover{
+  color: rgba(255, 255, 255, 0.631);
+}
+
+.calculatorKeypad button:nth-child(-n+3):active,
+.calculatorKeypad button:nth-child(4n):active,
 .calculatorKeypad button:nth-child(20):active{
-  border: #FFFAE7 4px solid;
+  border: #FFFAE7 3px solid;
+  box-shadow: 0 0 10px rgba(255, 250, 231, 0.5);
 }
 
 .calcBtn:active{
-  border: #181D31 4px solid;
+  border: black 1px solid;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+/* Responsive */
 
 @media (max-width: 996px){
   .calculator{
