--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import '@fortawesome/fontawesome-svg-core/styles.css';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,4 +17,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button, span{
+  cursor: pointer;
 }
