Dynamic height for calculator in Safari on iOS
Use safe-area-inset-bottom to reduce height on calculator when used by iOS 11 in Safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - env(safe-area-inset-bottom));
   width: 100vw;
 }
 
