--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - env(safe-area-inset-bottom));
+  height: 100dvh;
   width: 100vw;
 }
 
