--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,18 +14,19 @@
 .calculatorScreen{
   height: 37.5%;
   background-color: #181D31;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  gap: 1.5rem;
 }
 
 .calculatorScreen .miniScreen span{
-  position: relative;
-  top: 3.25rem;
-  font-size: 2rem;
+  font-size: 2.25rem;
 }
 
 .calculatorScreen .mainScreen span{
-  position: relative;
-  top: 5rem;
-  font-size: 5.25rem;
+  font-size: 5.75rem;
 }
 
 .calculatorKeypad{
@@ -76,16 +77,17 @@
 }
 
 .sideMenuButton{
-  position: relative;
+  position: absolute;
   background-color: #181D31;
-  right: 47%;
-  top: 0.2rem;
+  top: 0;
+  left: 0;
+  margin-left: 0.5rem;
   border: none;
 }
 
 .sideMenuButtonIcon{
   color: #FFFAE7!important;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 /* Responsive */
