--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,30 +77,32 @@
 }
 
 .calculatorScreen svg{
-  color: #FFFAE7!important;
   font-size: 2.5rem;
 }
 
-.sideMenuButton{
+.calculatorScreen svg:hover {
+  transform: scale(1.25);
+ }
+
+ .popupMenuButton{
   position: absolute;
   background-color: #181D31;
   top: 0;
-  left: 0;
-  margin: 0.5rem 0rem 0rem 0.5rem;
   border: none;
+  margin-top: 0.5rem;
+ }
+
+.sideMenuButton{
+  left: 0;
+  margin-left: 0.5rem;
 }
 
 .aboutMenuButton{
-  position: absolute;
-  background-color: #181D31;
-  top: 0;
   right: 0;
-  margin: 0.5rem 0.5rem 0rem 0rem;
-  border: none;
+  margin-right: 0.5rem;
 }
 
 /* Responsive */
-
 @media (max-width: 996px){
   .calculator{
     width: 70%;
