--- a/styles/ModalStyles.module.css
+++ b/styles/ModalStyles.module.css
@@ -1,28 +1,55 @@
 .modalHeader{
+  height: 10%;
+  background-color: #4d91d1;
+  font-size: 2.5rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modalBody{
+    border-width: 1px 0;
+    height: 82%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 0 6rem;
+}
+
+.modalBody * {
+  color: #181D31;
 }
 
 .modalFooter{
-}
+    height: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4d91d1;
+  }
 
 .closeModalButton{
     position: absolute;
     top: 0;
     right: 0;
-    margin: 0.5rem;
-    color: #181D31;
-    background-color: #999999;
-    width: 2.75rem;
-    height: 2.75rem;
+    margin: 0.75rem;
+    background-color: transparent;
     border: none;
     border-radius: 0.75rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
   }
 
   .closeModalButton:hover{
-    background-color: #181D31;
-    color: #FFFAE7;
+    color: #181D31;
+  }
+
+  .modalFooter .modalFooterIcon{
+    font-size: 2rem;
+    padding: 0.25rem;
+  }
+
+  .modalFooter .modalFooterIcon:hover{
+    transform: scale(1.25);
   }
