--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-@import '@fortawesome/fontawesome-svg-core/styles.css';
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -19,6 +17,6 @@ a {
   text-decoration: none;
 }
 
-button, span{
+button, span, svg{
   cursor: pointer;
 }
