Improve application responsiveness
Adjust sideMenu location
Resize modal body & text on smaller screens
Improve responsiveness of calculator

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -78,9 +78,21 @@
 
 /* Responsive */
 
+@media (max-width: 1200px){
+  .calculator{
+    width: 60%;
+  }
+}
+
 @media (max-width: 996px){
   .calculator{
     width: 70%;
+  }
+}
+
+@media (max-width: 768px){
+  .calculator{
+    width: 80%;
   }
 }
 
