--- a/styles/SideMenu.module.css
+++ b/styles/SideMenu.module.css
@@ -15,9 +15,8 @@
 }
 
 .sideMenuContainer {
-    background-color: red;
     position: absolute;
-    top: 0;
+    top: 0.5rem;
     left: 3rem;
     display: flex;
     flex-direction: row;
