--- a/styles/ModalStyles.module.css
+++ b/styles/ModalStyles.module.css
@@ -67,3 +67,9 @@
       scale: 0.9;
     }
   }
+
+  @media (max-width: 575px){
+    .modalBody p, .modalBody h3, .modalBody h4, .modalBody li {
+      scale: 0.85;
+    }
+  }
