Implement light mode and dark mode
Calculator screen and child items now toggle between light and dark mode

Modal height increases to 100% on small screens (so content can fit)

--- a/styles/Colours.module.css
+++ b/styles/Colours.module.css
@@ -1,7 +1,25 @@
-.whiteBackground {
+.lightBackground {
   background-color: white;
 }
 
 .darkBackground {
   background-color: #181D31;
+}
+
+.lightIcon{
+  color: white;
+}
+
+.darkIcon{
+  color: #181D31;
+}
+
+.darkButton {
+  background-color: #181D31;
+  border: none;
+}
+
+.lightButton {
+  background-color: white;
+  border: none;
 }
