Refactor app wide CSS
Migrate all background/text colour css to seperate classes in Colours.module.css

Logic toggling button and SVG classes more readable

Adjust Modal on smaller screens

Text on calculator screen changes depending on screen colour

Onhover screen text is now gray

--- a/styles/Colours.module.css
+++ b/styles/Colours.module.css
@@ -1,5 +1,9 @@
 .lightBackground {
-  background-color: white;
+  background-color: #ffffff;;
+}
+
+.blueBackground {
+  background-color: #0779E4;
 }
 
 .darkBackground {
@@ -7,7 +11,7 @@
 }
 
 .lightIcon{
-  color: white;
+  color: #ffffff;;
 }
 
 .darkIcon{
@@ -20,6 +24,18 @@
 }
 
 .lightButton {
-  background-color: white;
+  background-color: #ffffff;
   border: none;
+}
+
+.lighterButton{
+  background-color: #FFFAE7;
+}
+
+.lightText{
+  color: #ffffff;;
+}
+
+.darkText{
+  color: #181D31;
 }
