--- a/styles/ModalStyles.module.css
+++ b/styles/ModalStyles.module.css
@@ -1,6 +1,5 @@
 .modalHeader{
   height: 10%;
-  background-color: #4d91d1;
   font-size: 2.5rem;
   font-weight: bold;
   display: flex;
@@ -17,16 +16,11 @@
     padding: 0 6rem;
 }
 
-.modalBody * {
-  color: #181D31;
-}
-
 .modalFooter{
     height: 8%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #4d91d1;
   }
 
 .closeModalButton{
@@ -51,7 +45,7 @@
   }
 
   .modalFooter .modalFooterIcon:hover{
-    transform: scale(1.25);
+    color: #181D31;
   }
 
   /* Responsive */
@@ -59,6 +53,12 @@
   @media (max-width: 768px){
     .modalBody {
       padding: 0 1.5rem;
+    }
+  }
+
+  @media (max-width: 575px){
+    .modalBody {
+      padding: 0 0.25rem;
     }
   }
 
