Implement HistorySideMenu & Modal
Implement HistorySideMenu
Implement HistoryMenuModal
Place HistorySideMenu button & icon in right hand corner

--- a/styles/SideMenu.module.css
+++ b/styles/SideMenu.module.css
@@ -9,6 +9,11 @@
     margin-left: 0.5rem;
 }
 
+.historySideMenuButton {
+    right: 0;
+    margin-right: 0.5rem;
+}
+
 .sideMenuContainer {
     position: absolute;
     top: 0.5rem;
