Adjust responsive css styling
Reduce font-size for display of current and previous calculations on smaller screens
Adjust footer to always be at bottom of modal

--- a/styles/ModalStyles.module.css
+++ b/styles/ModalStyles.module.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 0.5rem 6rem 0.5rem 6rem;
+    padding: 0.75rem 6rem 0.75rem 6rem;
 }
 
 .modalBody .card{
@@ -42,6 +42,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
   }
 
 .closeModalButton{
@@ -92,11 +93,5 @@
   @media (max-width: 575px){
     .modalBody p, .modalBody h3, .modalBody h4, .modalBody li {
       scale: 0.85;
-    }
-  }
-
-  @media (max-width: 575px){
-    .moddalFooter {
-      height: 10.25%;
     }
   }
