--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,12 +20,12 @@
   gap: 1.5rem;
 }
 
-.calculatorScreen .miniScreen span{
-  font-size: 2.25rem;
+.calculatorScreen .mainScreen span{
+  font-size: 4rem;
 }
 
-.calculatorScreen .mainScreen span{
-  font-size: 5.75rem;
+.calculatorScreen .miniScreen span{
+  font-size: 2rem;
 }
 
 /* onclick & hover */
@@ -57,6 +57,36 @@
 @media (max-width: 576px){
   .calculator{
     width: 100%;
+  }
+}
+
+@media (max-width: 1300px){
+  .calculatorScreen .mainScreen span{
+    font-size: 3.75rem;
+  }
+}
+
+@media (max-width: 768px){
+  .calculatorScreen .mainScreen span{
+    font-size: 3.25rem;
+  }
+}
+
+@media (max-width: 576px){
+  .calculatorScreen .mainScreen span{
+    font-size: 2.75rem;
+  }
+}
+
+@media (max-width: 1200px){
+  .calculatorScreen .miniScreen span{
+    font-size: 1.75rem;
+  }
+}
+
+@media (max-width: 768px){
+  .calculatorScreen .miniScreen span{
+    font-size: 1.25rem;
   }
 }
 
